- Fix extra border in single select with search - Fix shoelace changed maxTagsVisible -> maxOptionsVisible

--- a/api/templates/default/etemplate2.css
+++ b/api/templates/default/etemplate2.css
@@ -544,7 +544,7 @@ textarea.et2_textbox_ro {
 /**
  * Multi-select widget
  */
-[search][multiple] ::part(base) {
+[search][open] ::part(base) {
 	border: none;
 	box-shadow: none;
 }
